<resources>
    <string name="app_name">Next Reminder</string>
    <string name="title_home">Search Recommendation</string>
    <string name="title_random">Random Recommendation</string>
    <string name="title_bookmarks">Your Bookmarks</string>
    <string name="title_search_result">Search Result</string>
    <string name="bottom_nav_home">Search</string>
    <string name="bottom_nav_random">Random</string>
    <string name="bottom_nav_bookmarks">Bookmarks</string>

    <!-- Search screen -->
    <string name="home_title">What media did you enjoy recently?</string>
    <string name="home_subtitle">Discover music, movies, TV shows, books, games and podcasts based on what you like.</string>
    <string name="search">Search</string>
    <string name="search_hint">Search with the media name</string>
    <string name="search_helper">Hint: you can add several names by separating them with a comma
        .</string>
    <string name="chip_title">Choose one filter:</string>
    <string name="chip_music">Music</string>
    <string name="chip_movies">Movies</string>
    <string name="chip_tvshows">TV Shows</string>
    <string name="chip_books">Books</string>
    <string name="chip_games">Games</string>
    <string name="chip_podcasts">Podcasts</string>

    <!-- Search result screen-->
    <string name="search_result_title">Result for: %1$s</string>
    <string name="search_result_search">Search again</string>

    <!-- Random screen -->
    <string name="random_title">No inspiration?</string>
    <string name="random_subtitle">Shake your phone to get a random suggestion from your bookmarks!</string>
    <string name="random_button_helper">(Or tap the button below)</string>
    <string name="random_button">Random</string>
    <string name="random_loading">Choosing for you!</string>

    <!-- Bookmark list screen -->
    <string name="bookmarks_snackbar_title">Removed bookmark for %1$s</string>
    <string name="bookmarks_snackbar_action">Undo</string>
    <string name="bookmarks_empty_title">No bookmarks yet.</string>
    <string name="bookmarks_empty_subtitle">Try searching for suggestions?</string>
    <string name="bookmarks_empty_button">Go search</string>

    <!-- Item detail screen-->
    <string name="detail_wikipedia"><u>Wikipedia</u></string>
    <string name="detail_youtube"><u>Youtube</u></string>
    <string name="detail_fab">Bookmark</string>
    <string name="detail_images">Related Images</string>

    <!-- Accessibility -->
    <string name="content_description_type">Type: %1$s</string>
    <string name="content_description_add_bookmark">Add bookmark for %1$s</string>
    <string name="content_description_remove_bookmark">Remove bookmark for %1$s</string>
    <string name="content_description_close">Close details</string>
    <string name="content_description_grid_image">Image %1$s</string>

    <!-- Common error message-->
    <string name="error_empty_keyword">Error: you can\'t search without keyword(s)!</string>
    <string name="error_network">Network error. Please try again.</string>
    <string name="error_search_result_extra_parsing">Unknown error. Please try again.</string>
    <string name="error_empty_result">Sorry, no results found… \nTry searching something else?</string>
    <string name="error_removing_bookmark">Error removing the bookmark</string>
    <string name="error_adding_bookmark">Error adding the bookmark</string>
    <string name="error_no_bookmarks">No bookmarks yet</string>
    <string name="error_detail_extra_parsing">Error retrieving the details</string>
    <string name="error_detail_image_no_keywords">Nothing to search about</string>
    <string name="error_detail_image_not_found">No images found</string>

    <!-- Transition (used with android:transitionName attribute on origin & destination) -->
    <string name="transition_item_title">itemTitle</string>
    <string name="transition_item_type">itemType</string>
    <string name="transition_item_description">itemDescription</string>

    <!-- XML preview -->
    <string name="long_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>