<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.nextreminder.ui.main.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="@dimen/activity_default_margin"
            tools:context=".ui.main.HomeFragment">

            <TextView
                android:id="@+id/homeTitle"
                style="@style/LargeTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_medium"
                android:text="@string/home_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/homeSubTitle"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_medium"
                android:text="@string/home_subtitle"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/homeTextField"
                style="@style/TextFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:paddingVertical="@dimen/padding_small"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/search_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeSubTitle"
                app:startIconContentDescription="@null"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.queryString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/homeChipTitle"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/homeChipGroup"
                android:paddingHorizontal="@dimen/padding_large"
                android:paddingVertical="@dimen/padding_medium"
                android:text="@string/chip_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeTextField" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/homeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_medium"
                app:chipSpacingHorizontal="@dimen/padding_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeChipTitle"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/chip_music" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_movies" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTvShows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_tvshows" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBooks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_books" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_games" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPodcasts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_podcasts" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_medium"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeChipGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>