<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.nextreminder.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookmarkList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bindListData="@{viewModel.bookmarkList}"
            app:isGone="@{viewModel.bookmarkList.size == 0}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="6"
            tools:listitem="@layout/list_item"
            tools:visibility="gone" />

        <TextView
            style="@style/LargeTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/bookmarks_empty_title" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bookmarks_empty_subtitle"
            android:textAlignment="center"
            app:isGone="@{viewModel.bookmarkList.size != 0}" />

        <Button
            android:id="@+id/goSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bookmarks_empty_button"
            app:isGone="@{viewModel.bookmarkList.size != 0}" />

    </LinearLayout>
</layout>