<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.android.nextreminder.ui.searchresult.SearchResultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/LargeTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            android:elevation="2dp"
            android:padding="@dimen/padding_small"
            android:text="@{@string/search_result_title(viewModel.queryString)}"
            app:isGone="@{viewModel.queryString == null || TextUtils.isEmpty(viewModel.queryString)}"
            tools:text="@string/search_result_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:bindListData="@{viewModel.resultList}"
            app:isGone="@{viewModel.resultList.size == 0}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="6"
            tools:listitem="@layout/list_item" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:paddingHorizontal="@dimen/activity_default_margin"
            android:paddingVertical="@dimen/padding_medium"
            android:text="@string/error_empty_result"
            android:textAlignment="center"
            app:isGone="@{viewModel.loading || viewModel.resultList.size != 0 || viewModel.queryString == null}" />

        <Button
            android:id="@+id/searchAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:onClick="@{() -> viewModel.searchAgain()}"
            android:text="@string/search_result_search"
            app:isGone="@{viewModel.loading || viewModel.resultList.size != 0}" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_large"
            app:isGone="@{!viewModel.loading}" />
    </LinearLayout>
</layout>