<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.android.nextreminder.ui.detail.DetailViewModel" />
    </data>

    <!-- Wrap in a CoordinatorLayout for the FAB's shrinking animation -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/detailRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/detailMotionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/detail_title_motion">

            <TextView
                android:id="@+id/detailItemTitle"
                style="@style/TitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_large"
                android:ellipsize="end"
                android:text="@{viewModel.similarItem.name}"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:transitionName="@string/transition_item_title"
                app:layout_constraintEnd_toStartOf="@id/detailClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <ImageView
                android:id="@+id/detailItemType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@{@string/content_description_type(viewModel.similarItem.type.name())}"
                android:padding="@dimen/padding_medium"
                android:transitionName="@string/transition_item_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailItemTitle"
                app:tint="?colorPrimaryVariant"
                app:typeIcon="@{viewModel.similarItem.type}"
                tools:src="@drawable/ic_book" />

            <ImageButton
                android:id="@+id/detailClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginEnd="@dimen/padding_small"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_close"
                android:foreground="?selectableItemBackground"
                android:minWidth="@dimen/accessibility_min_height"
                android:minHeight="@dimen/accessibility_min_height"
                android:onClick="@{() -> viewModel.closeDetail()}"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:textColorPrimary" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/detailScrollView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailItemType">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/activity_default_margin"
                    android:paddingBottom="@dimen/padding_above_fab">

                    <TextView
                        android:id="@+id/detailItemDescription"
                        style="@style/BodyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_large"
                        android:lineSpacingMultiplier="1.5"
                        android:text="@{viewModel.similarItem.description}"
                        android:transitionName="@string/transition_item_description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/long_placeholder" />

                    <Button
                        android:id="@+id/itemWikipedia"
                        style="@style/UrlButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_medium"
                        android:text="@string/detail_wikipedia"
                        app:isGone="@{TextUtils.isEmpty(viewModel.similarItem.wikipediaUrl)}"
                        app:layout_constraintEnd_toStartOf="@+id/itemYoutube"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/detailItemDescription"
                        app:url="@{viewModel.similarItem.wikipediaUrl}" />

                    <Button
                        android:id="@+id/itemYoutube"
                        style="@style/UrlButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_medium"
                        android:text="@string/detail_youtube"
                        app:isGone="@{TextUtils.isEmpty(viewModel.similarItem.youtubeVideoUrl)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/itemWikipedia"
                        app:layout_constraintTop_toBottomOf="@id/detailItemDescription"
                        app:url="@{viewModel.similarItem.youtubeVideoUrl}" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <ProgressBar
                android:id="@+id/detailProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isGone="@{!viewModel.loading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detailBookmarkFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/activity_default_margin"
            android:contentDescription="@{viewModel.similarItem.isBookmarked ? @string/content_description_remove_bookmark : @string/content_description_add_bookmark}"
            android:onClick="@{() -> viewModel.addOrRemoveBookmark()}"
            android:src="@{viewModel.similarItem.isBookmarked ? @drawable/ic_bookmark : @drawable/ic_bookmark_border}"
            tools:src="@drawable/ic_bookmark_border" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>